--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Rodrigo Ledesma-Pinet</a></h1>
-					<p>Soy un ingeniero en robótica convertido en desarrollador de doftware. Lo mío es el código. ¡Bienvenido!</p>
+					<p>Soy un ingeniero en robótica convertido en desarrollador de software. Lo mío es el código. ¡Bienvenido!</p>
 				</header>
 				<nav id="nav">
 					<ul>
