Finished TinDog Site

--- a/index.html
+++ b/index.html
@@ -1,174 +1,150 @@
-<!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Rodrigo Ledesma-Pinet | Portfolio</title>
-		<link rel = "icon" href = "images/icon.png" type = "image/x-icon">
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="https://use.fontawesome.com/87ef72c2aa.js"></script>
-	</head>
-	<body class="is-preload">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>RoiPinet | Personal Page</title>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/css/main.css" />
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- NavBar -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-purple">
+      <a class="navbar-brand" href="#"
+        ><img src="/images/logomin.jpg" alt="" id="brand-img"
+      /></a>
+      <button
+        class="navbar-toggler pull-right"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Rodrigo Ledesma-Pinet</a></h1>
-					<p>Soy un ingeniero en robótica convertido en desarrollador de software. Lo mío es el código. ¡Bienvenido!</p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#one" class="active">Acerca de mí</a></li>
-						<li><a href="#two">Lo que hago</a></li>
-						<li><a href="#three">Algunos logros</a></li>
-						<li><a href="#four">Contacto</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://twitter.com/RoiPinet" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://github.com/roipinet" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-				</footer>
-			</section>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-light navbar-btn">
+              About Me
+            </button>
+          </li>
+          <li class="nav-item">
+            <button
+              type="button"
+              class="btn btn-outline-light navbar-btn"
+              href="about"
+            >
+              Skills
+            </button>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-light navbar-btn">
+              Projects
+            </button>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-light navbar-btn">
+              Resume
+            </button>
+          </li>
+          <li class="nav-item">
+            <button type="button" class="btn btn-outline-light navbar-btn">
+              Contact Me
+            </button>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Title -->
+    <div class="container-fluid title">
+      <div class="row">
+        <div class="col-lg-6">
+          <h1 id="title-header">Hi, I'm Rodrigo!</h1>
+          <h3 class="title-text">
+            A robotics engineer turned software developer. Let's build together!
+          </h3>
+        </div>
+        <div class="col-lg-6">
+          <img src="/images/robot_clear.png" alt="" id="robot-img" />
+        </div>
+      </div>
+    </div>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+    <!-- About -->
+    <div class="container about">
+      <h2>So what does that actually mean?</h2>
+      <p>
+        It means I know my hardware, but what I really love doing is coding.
+        Therefore I can handle myself with hardware-level code such as Assembly
+        and C, but I also know high level languages such as Java and Python, as
+        well as concepts of computer networks. My newest interest however is web
+        development, which is quickly becoming my passion. In this page you can
+        find an overview of my profile and some sample work that I've done.
+        There are also links to my GitHub profile and social media such as
+        LinkedIn. If you wish, you can also download my resume from
+        <a href="">here</a> or use the link on the navigation bar.
+      </p>
+      <h2>My Education</h2>
+      <p>
+        If you would like to know about my qualifications, these include the
+        following:
+      </p>
+      <ul>
+        <li>
+          <em>Tecnológico de Monterrey</em><br />
+          Bachelor's Degree in Digital Systems & Robotics Engineering (GPA 3.3)
+        </li>
+        <li>
+          <em>Duke University (through Coursera)</em><br />
+          Java Programming and
+        </li>
+      </ul>
+    </div>
 
-				<!-- Main -->
-					<div id="main">
-
-						<!-- One -->
-							<section id="one">
-								<div class="image main" data-position="center">
-									<img src="images/banner2.jpg" alt="" />
-								</div>
-								<div class="container">
-									<header class="major">
-										<h2>Rodrigo Ledesma Pinet</h2>
-										<p>Acerca de mí</p>
-									</header>
-									<p>Me gradué del Tecnológico de Monterrey como Ingeniero en Sistemas Digitales y Robótica.
-										Sin embargo, durante mis estudios me di cuenta de que disfruto más escribir código que 
-										diseñar circuitos. Desde entonces he buscado reorientar mi carrera hacia el desarrollo
-										de software, particularmente el desarrollo web. A continuación encontrarás una vista
-										general de algunos de mis proyectos, y en la barra de navegación encontrarás un enlace
-										a mi GitHub, donde encontrarás código escrito por mí. 
-									</p>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="container">
-									<h3>Lo que hago</h3>
-									<p>Debido a mi carrera, estudié los sistemas computacionales desde una perspectiva de hardware,
-										por lo que tengo conocimiento de temas como arquitectura de computadoras, multiprocesadores
-										y sistemas embebidos. Sin embargo, como ya he dicho, lo mio es el código, por lo que algunas
-										habilidades que considero relevantes son:
-									</p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Lenguajes: Java, Python, C/C++, JavaScript, HTML, CSS.</li>
-										<li class="icon solid fa-microchip">Microcontroladores</li>
-										<li class="icon solid fa-code-branch">Git / GitHub</li>
-										<li class="icon solid fa-database">Bases de datos (MySQL / MariaDB)</li>
-										<li class="icon solid fa-bolt">Circuitos electrónicos</li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>Algunos logros</h3>
-									
-									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="images/snz.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>SNZ</h4>
-												<p>SNZ (pronunciado  /sɛn(t)s/ "Sense") es una empresa que ayudé a fundar durante mis últimos semestres de la universidad. 
-													El objetivo es desarrollar un brazalete (TellMe) con una cámara y una bocina para la asistencia a invidentes. Desafortunadamente,
-													al ser una marca registrada, no puedo mostrar el código, pero estuve involucrado en el proceso de desarrollo desde el diseño hasta
-													la implementación del segundo prototipo funcional, que es en el que trabaja actualmente, y estré feliz de discutir la implementación
-													a groso modo.
-												</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/cs50.png" alt="" /></a>
-											<div class="inner">
-												<h4>Certificaciones de Harvard CS50</h4>
-												<p>Cuento con certificados profesionales de la Universidad de Harvard a través de edX, gracias al excelente trabajo de los profesores 
-													David Malan, Brian Yu, Colton Ogden y sus colaboradores. Los certificados son en las áreas de: Desarrollo Web, Desarrollo de Videojuegos
-												e Inteligencia Artificial.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/tec.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Premio al Mejor Proyecto del Departamento de Computación del ITESM Otoño 2018</h4>
-												<p>En 2018 desarrollé junto con mi equipo en la clase de Visión para Robots un mecanismo que utilizaba un teléfono Android como cámara inalámbrica, 
-													reconocía y catalogaba objetos en la escena y los ponía en su lugar accionando un Arduino localizado en el puerto serial de la computadora. 
-												</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Contacto</h3>
-									<p>Siempre serán bienvenidos tus correos en la dirección rodrigopinet@outlook.com , pero también puedes utilizar el siguiente formulario para ponerte en contacto conmigo. 
-										¡Muchas gracias!
-									</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Nombre" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Asunto" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Mensaje" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Enviar Mensaje" /></li>
-													<li><input type="reset" value="Borrar" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section>
-
-					</div>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Footer -->
+    <div class="container">
+      <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+    </div>
+  </body>
 </html>
